# carrot

./: .gitignore  ARCHITECTURE.md  CARROT-GITHUB-MIGRATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  kill-carrot.sh
crates/cargo-carrot/: Cargo.toml
crates/cargo-carrot/src/: build.rs  bundle.rs  dev.rs  icon.rs  main.rs  package_linux.rs  package_mac.rs  package_windows.rs
crates/carrot-acp-thread/: Cargo.toml
crates/carrot-acp-thread/src/: acp_thread.rs  connection.rs  diff.rs  mention.rs  terminal.rs
crates/carrot-acp-tools/: Cargo.toml
crates/carrot-acp-tools/src/: acp_tools.rs
crates/carrot-action-log/: Cargo.toml
crates/carrot-action-log/src/: action_log.rs
crates/carrot-actions/: Cargo.toml
crates/carrot-actions/src/: lib.rs
crates/carrot-activity-indicator/: Cargo.toml
crates/carrot-activity-indicator/src/: activity_indicator.rs
crates/carrot-agent/: Cargo.toml
crates/carrot-agent-servers/: Cargo.toml
crates/carrot-agent-servers/src/: acp.rs  agent_servers.rs  custom.rs  e2e_tests.rs
crates/carrot-agent-settings/: Cargo.toml
crates/carrot-agent-settings/src/: agent_profile.rs  agent_settings.rs
crates/carrot-agent-ui/: Cargo.toml
crates/carrot-agent-ui/src/: agent_configuration.rs  agent_connection_store.rs  agent_diff.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  buffer_codegen.rs  completion_provider.rs  config_options.rs  context.rs  context_server_configuration.rs  conversation_view.rs  entry_view_state.rs  favorite_models.rs  inline_assistant.rs  inline_prompt_editor.rs  language_model_selector.rs  mention_set.rs  message_editor.rs  mode_selector.rs  model_selector.rs  model_selector_popover.rs  profile_selector.rs  slash_command.rs  slash_command_picker.rs  terminal_codegen.rs  terminal_inline_assistant.rs  test_support.rs  text_thread_editor.rs  text_thread_history.rs  thread_history.rs  thread_history_view.rs  thread_metadata_store.rs  threads_archive_view.rs
crates/carrot-agent-ui/src/agent_configuration/: add_llm_provider_modal.rs  configure_context_server_modal.rs  configure_context_server_tools_modal.rs  manage_profiles_modal.rs  tool_picker.rs
crates/carrot-agent-ui/src/conversation_view/: thread_view.rs
crates/carrot-agent-ui/src/ui/: acp_onboarding_modal.rs  (+7 more)
crates/carrot-agent/src/: agent.rs  db.rs  edit_agent.rs  legacy_thread.rs  native_agent_server.rs  outline.rs  pattern_extraction.rs  templates.rs  tests.rs  thread.rs  thread_store.rs  tool_permissions.rs  tools.rs
crates/carrot-ai-onboarding/: Cargo.toml
crates/carrot-ai-onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_card.rs  agent_panel_onboarding_content.rs  ai_onboarding.rs  ai_upsell_card.rs  edit_prediction_onboarding_content.rs  plan_definitions.rs  young_account_banner.rs
crates/carrot-anthropic/: Cargo.toml
crates/carrot-anthropic/src/: anthropic.rs  batches.rs
crates/carrot-app/: Cargo.toml  bundle.sh
crates/carrot-app/assets/: Assets.car  carrot.desktop
crates/carrot-app/src/: app_bootstrap.rs  carrot.rs  main.rs  reliability.rs
crates/carrot-askpass/: Cargo.toml
crates/carrot-askpass/src/: askpass.rs  encrypted_password.rs
crates/carrot-assistant-slash-command/: Cargo.toml
crates/carrot-assistant-slash-command/src/: assistant_slash_command.rs  extension_slash_command.rs  slash_command_registry.rs  slash_command_working_set.rs
crates/carrot-assistant-slash-commands/: Cargo.toml
crates/carrot-assistant-slash-commands/src/: assistant_slash_commands.rs  default_command.rs  delta_command.rs  diagnostics_command.rs  fetch_command.rs  file_command.rs  now_command.rs  prompt_command.rs  selection_command.rs  streaming_example_command.rs  symbols_command.rs  tab_command.rs
crates/carrot-assistant-text-thread/: Cargo.toml
crates/carrot-assistant-text-thread/src/: assistant_text_thread.rs  assistant_text_thread_tests.rs  context_server_command.rs  text_thread.rs  text_thread_store.rs
crates/carrot-auto-update/: Cargo.toml
crates/carrot-auto-update-ui/: Cargo.toml
crates/carrot-auto-update-ui/src/: auto_update_ui.rs
crates/carrot-auto-update/src/: auto_update.rs
crates/carrot-aws-http-client/: Cargo.toml
crates/carrot-aws-http-client/src/: aws_http_client.rs
crates/carrot-block-render/: Cargo.toml  README.md
crates/carrot-block-render/benches/: idle_frame.rs  render.rs  resize.rs  yes_4k.rs
crates/carrot-block-render/shaders/: msdf_glyph.wgsl  scrollback_search.wgsl
crates/carrot-block-render/src/: block_element.rs  cursor.rs  damage.rs  decoration.rs  diff.rs  frame.rs  image_pass.rs  image_upload.rs  lib.rs  msdf_atlas.rs  msdf_rasteriser.rs  msdf_upload.rs  palette.rs  shaders.rs  shape_cache.rs  shaping.rs  snapshot.rs  soft_wrap.rs
crates/carrot-block-render/tests/: cross_layer.rs  damage_pipeline.rs  full_pipeline.rs  scrollback_pipeline.rs  spike_end_to_end.rs  wide_char_wrap.rs
crates/carrot-breadcrumbs/: Cargo.toml
crates/carrot-breadcrumbs/src/: breadcrumbs.rs
crates/carrot-call/: Cargo.toml
crates/carrot-call/src/: call_impl.rs
crates/carrot-channel/: Cargo.toml
crates/carrot-channel/src/: channel.rs  channel_buffer.rs  channel_store.rs  channel_store_tests.rs
crates/carrot-chips/: Cargo.toml
crates/carrot-chips/src/: command.rs  context.rs  icons.rs  lib.rs  provider.rs  providers.rs  registry.rs  render.rs
crates/carrot-cli-agents/: Cargo.toml
crates/carrot-cli-agents/src/: agent.rs  agents.rs  child_process_watcher.rs  cli_agents.rs  detection.rs  diff_stats_poller.rs  hook_events.rs  plugin_installer.rs  registry.rs  session.rs  session_core.rs  session_manager.rs
crates/carrot-client/: Cargo.toml
crates/carrot-client/src/: carrot_urls.rs  client.rs  proxy.rs  telemetry.rs  test.rs  user.rs
crates/carrot-cloud-api-client/: Cargo.toml
crates/carrot-cloud-api-client/src/: cloud_api_client.rs  websocket.rs
crates/carrot-cloud-api-types/: Cargo.toml
crates/carrot-cloud-api-types/src/: cloud_api_types.rs  plan.rs  websocket_protocol.rs
(+1953 files in other folders)
